--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="menu">
                 <ul>
                     <li><a href="#">Home</a></li>
-                    <li><a href="">Service</a></li>
+                    <li><a href="">service</a></li>
                     <li><a href="#">About</a></li>
                     <li><a href="#">Design</a></li>
                     <li><a href="#">Contact</a></li>
